--- a/templates/notFound.html
+++ b/templates/notFound.html
@@ -1,5 +1,5 @@
-<template name="NotFound">
-    <div class="fireball-basic-notfound">
+<template name="notFound">
+    <div class="fireball-freelancer-notfound">
         <div class="container" role="main">
             <div class="jumbotron">
                 <h1><i class="fa fa-ambulance"></i> <strong>error 404</strong></h1>
